app/main/default/objects/Source_Object__c/fields/Checked__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>