app/main/default/objects/Source_Object__c/fields/DateTime__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
</CustomObject>