app/main/default/objects/Source_Object__c/fields/GeoLocation__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
</CustomObject>