app/main/default/objects/Source_Object__c/fields/Source_Parent__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Source_Parent__c</fullName>
        <label>Source Parent</label>
        <referenceTo>Source_Parent__c</referenceTo>
        <relationshipLabel>Source Object</relationshipLabel>
        <relationshipName>Source_Object</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>