app/main/default/objects/Source_Object__c/fields/Source_Parent_Lookup__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Source_Parent_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Parent Lookup</label>
        <referenceTo>Source_Parent__c</referenceTo>
        <relationshipLabel>Source Object (Source Parent Lookup)</relationshipLabel>
        <relationshipName>Source_Object1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>