app/main/default/objects/Source_Object__c/fields/Text_Area__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
</CustomObject>