app/main/default/objects/Source_Object__c/fields/Text_Formula__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Text_Formula__c</fullName>
        <formula>Source_Parent__r.Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Formula</label>
        <type>Text</type>
    </fields>
</CustomObject>